@@ -30,7 +30,7 @@ fun BuildType.applyPerformanceTestSettings(os: Os = Os.linux, timeout: Int = 30)
         doesNotContain("teamcity.agent.name", "ec2")
     }
     params {
-        param("env.GRADLE_OPTS", "-Xmx1536m -XX:MaxPermSize=384m")
+        param("env.GRADLE_OPTS", "-Xmx1536m")
         param("env.JAVA_HOME", buildJavaHome)
         param("env.BUILD_BRANCH", "%teamcity.build.branch%")
         param("performance.db.url", "jdbc:h2:ssl://dev61.gradle.org:9092")
