@@ -68,8 +68,6 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationTest {
         if (GradleContextualExecuter.isDaemon()) {
             // don't load scala into the daemon as it exhausts permgen
             return
-        } else if (!GradleContextualExecuter.isEmbedded() && !GradleContextualExecuter.isParallel() && !JavaVersion.current().isJava8Compatible()) {
-            executer.withBuildJvmOpts('-XX:MaxPermSize=128m')
         }
 
         TestFile projectDir = sample.dir
